--- a/www/src/components/Nav.astro
+++ b/www/src/components/Nav.astro
@@ -62,7 +62,7 @@ let { title = 'Cobalt' } = Astro.props;
 
   body.page--home {
     .grid {
-      background: token("color.blue");
+      background: token("color.blue.05");
     }
 
     .title,
