--- a/www/src/styles/_button.scss
+++ b/www/src/styles/_button.scss
@@ -3,8 +3,8 @@
 .btn {
   background-color: token('color.white');
   border-radius: 0.5em;
-  border: 3px solid token('color.blue');
-  color: token('color.blue');
+  border: 3px solid token('color.blue.05');
+  color: token('color.blue.05');
   display: inline-block;
   font-size: inherit;
   font-weight: 500;
