--- a/www/src/styles/_md.scss
+++ b/www/src/styles/_md.scss
@@ -2,23 +2,17 @@
 @use '../../tokens' as *;
 
 .md-content {
-  font-size: token('font.size.05');
-
-  * + h1,
-  * + h2,
-  * + h3,
-  * + h4,
-  * + h5,
-  * + h6 {
-    margin-top: 4rem;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    position: relative;
   }
 
-  > h1:first-of-type {
-    margin-bottom: token('space.layout.md');
-  }
-
-  h2 {
-    margin-top: token('space.layout.lg');
+  h1 {
+    letter-spacing: -0.0125em;
   }
 
   img {
@@ -27,28 +21,34 @@
   }
 
   p {
-    line-height: 1.7;
-    margin-bottom: token('space.layout.md');
-    margin-top: token('space.layout.md');
-    max-width: 50em;
+    line-height: 1.8;
+    margin-bottom: token('space.md');
+    margin-top: token('space.md');
+    max-width: 48em;
   }
 
   ul,
   ol {
     line-height: 1.5;
-    margin-bottom: token('space.layout.md');
-    margin-top: token('space.layout.md');
+    margin-bottom: token('space.md');
+    margin-top: token('space.md');
     padding-left: 0;
 
     ul {
       margin: 0;
-      padding-left: token('space.layout.md');
+      padding-left: token('space.md');
     }
   }
 
+  ul li {
+    list-style: square;
+    margin-left: -#{token('space.xs')};
+    padding-left: token('space.xs');
+  }
+
   li {
-    margin-bottom: token('space.sm');
-    margin-top: token('space.sm');
+    margin-bottom: token('space.2xs');
+    margin-top: token('space.2xs');
 
     p:first-of-type {
       margin-top: 0;
@@ -63,11 +63,10 @@
   }
 
   code {
-    background: rgba(token('color.black'), 0.05);
-    border-radius: 4px;
+    border-radius: token('space.3xs');
     display: inline-block;
-    padding: token('space.2xs') token('space.sm');
-    font-size: token('font.size.03');
+    position: relative;
+    z-index: 2;
   }
 
   figure {
@@ -83,10 +82,10 @@
   }
 
   pre {
-    background: token('color.black');
+    background: token('color.blue.03');
     border-radius: token('space.3xs');
     color: token('color.white');
-    font-size: token('font.size.03');
+    line-height: 1.4;
     margin: token('space.md') 0;
     max-width: 100%;
     overflow-x: scroll;
@@ -102,16 +101,19 @@
 
   table {
     border-collapse: collapse;
-    font-size: token('font.size.03');
+    font-size: token('font.size.04');
     width: 100%;
+
+    code {
+      font-weight: 500;
+    }
   }
 
   th,
   td {
-    border-color: adjust-color($color: token('color.black'), $saturation: -50%, $lightness: 75%);
-    border-style: solid;
-    border-width: 1px 0 0 1px;
-    padding: token('space.xs') token('space.md');
+    padding: token('space.xs') token('space.sm');
+    line-height: 1.5;
+    vertical-align: top;
 
     &:last-of-type {
       border-right-width: 1px;
@@ -119,17 +121,23 @@
   }
 
   th {
+    font-size: token('font.size.04');
     font-weight: 600;
-    padding: token('space.xs') token('space.md');
+    border-bottom: 2px solid currentColor;
+  }
+
+  td {
+    border-bottom: 1px solid rgba(black, 0.2);
   }
 
   tr {
-    &:nth-of-type(even) {
-      background-color: adjust-color($color: token('color.black'), $saturation: -50%, $lightness: 86%);
+    &:last-child td {
+      border-bottom: none;
     }
 
-    &:last-of-type td {
-      border-bottom-width: 1px;
+    td:first-child,
+    th:first-child {
+      padding-left: 0;
     }
   }
 }
