--- a/www/src/components/CobaltSm.astro
+++ b/www/src/components/CobaltSm.astro
@@ -5,7 +5,7 @@
     align-items: flex-end;
     border: 2px solid currentColor;
     display: flex;
-    font-size: 100%;
+    font-size: 1rem;
     font-weight: 550;
     line-height: 0.8;
     height: token('space.xl');
