--- a/www/src/styles/_fonts.scss
+++ b/www/src/styles/_fonts.scss
@@ -7,18 +7,24 @@
   src: url('https://drewhost.s3.amazonaws.com/PPNeueMontrealVariable.ttf') format('truetype');
 }
 
-@font-face {
-  font-family: 'IBM Plex Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-300.woff2') format('woff2'),
-    url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-300.woff') format('woff');
+@each $wgt in 100, 200, 300, 400, 500, 600, 700 {
+  @font-face {
+    font-family: 'IBM Plex Mono';
+    font-style: normal;
+    font-weight: $wgt;
+    src: url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-#{$wgt}.woff2') format('woff2');
+  }
+
+  @font-face {
+    font-family: 'IBM Plex Mono';
+    font-style: italic;
+    font-weight: $wgt;
+    src: url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-#{$wgt}-italic.woff2') format('woff2');
+  }
 }
 
 @font-face {
-  font-family: 'IBM Plex Mono';
-  font-style: italic;
-  font-weight: 400;
-  src: url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-300-italic.woff2') format('woff2'),
-    url('https://drewhost.s3.amazonaws.com/ibm-plex-mono-300-italic.woff') format('woff');
+  font-family: 'Red Hat Mono';
+  font-weight: 1 999;
+  src: url('https://drewhost.s3.amazonaws.com/redhat-mono-variable.woff2') format('woff2');
 }
