--- a/www/src/components/DocsNav.astro
+++ b/www/src/components/DocsNav.astro
@@ -20,9 +20,9 @@ function showSubPage(url) {
   flex-direction: column;
   font-size: token('font.size.04');
   max-height: calc(100vh - #{token('space.layout.sm')});
+  min-width: token('space.layout.2xl');
   position: sticky;
   top: token('space.md');
-  width: token('space.layout.2xl');
 }
 
 .a {
