--- a/packages/plugin-css/test/fixtures/typography/want.css
+++ b/packages/plugin-css/test/fixtures/typography/want.css
@@ -6,36 +6,24 @@
 :root {
   --typography-family-body: "IBM Plex Sans", -system-ui, sans-serif;
   --typography-family-heading: Helvetica;
-}
-
-.typography-page-title {
-  font-family: Helvetica;
-  font-size: 48px;
-  font-weight: 600;
-  line-height: 1.25;
-  letter-spacing: 0.125em;
-}
-
-.typography-subheading {
-  font-family: Helvetica;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.375;
-  letter-spacing: 0.25em;
-  text-transform: uppercase;
-}
-
-.typography-callout {
-  font-family: "IBM Plex Sans", -system-ui, sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  font-style: italic;
-  line-height: 1.5;
-}
-
-.typography-body {
-  font-family: "IBM Plex Sans", -system-ui, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
+  --typography-page-title-font-family: Helvetica;
+  --typography-page-title-font-size: 48px;
+  --typography-page-title-font-weight: 600;
+  --typography-page-title-line-height: 1.25;
+  --typography-page-title-letter-spacing: 0.125em;
+  --typography-subheading-font-family: Helvetica;
+  --typography-subheading-font-size: 18px;
+  --typography-subheading-font-weight: 500;
+  --typography-subheading-line-height: 1.375;
+  --typography-subheading-letter-spacing: 0.25em;
+  --typography-subheading-text-transform: uppercase;
+  --typography-callout-font-family: "IBM Plex Sans", -system-ui, sans-serif;
+  --typography-callout-font-size: 18px;
+  --typography-callout-font-weight: 300;
+  --typography-callout-font-style: italic;
+  --typography-callout-line-height: 1.5;
+  --typography-body-font-family: "IBM Plex Sans", -system-ui, sans-serif;
+  --typography-body-font-size: 16px;
+  --typography-body-font-weight: 400;
+  --typography-body-line-height: 1.5;
 }
