--- a/www/src/components/DocsPagination.astro
+++ b/www/src/components/DocsPagination.astro
@@ -4,7 +4,7 @@ import pages from '../docs-manifest.json';
 let prev;
 let next;
 for (let n = 0; n < pages.pages.length; n++) {
-  if (pages.pages[n].pathname === Astro.request.url.pathname) {
+  if (pages.pages[n].pathname === Astro.url.pathname) {
     if (pages.pages[n - 1]) prev = pages.pages[n - 1];
     if (pages.pages[n + 1]) next = pages.pages[n + 1];
     break;
@@ -13,73 +13,95 @@ for (let n = 0; n < pages.pages.length; n++) {
 ---
 
 <style lang="scss">
-@use "../../tokens" as *;
+  @use '../../tokens' as *;
 
-.nav {
-  display: grid;
-  grid-gap: 2rem;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 4rem;
-  padding-top: 2rem;
-  width: 100%;
-}
+  .nav {
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 4rem;
+    padding-top: 2rem;
+    width: 100%;
+  }
 
-.prev,
-.next {
-  border: 1px solid token('color.blue.05');
-  position: relative;
-  text-decoration: none;
-  padding: token('space.sm');
-}
+  .prev,
+  .next {
+    border: 1px solid token('color.blue.05');
+    position: relative;
+    text-decoration: none;
+    padding: token('space.sm');
+  }
 
-.next {
+  .next {
+    .icon {
+      right: token('space.sm');
+    }
+
+    &:hover .icon {
+      transform: translateX(25%);
+    }
+  }
+
+  .prev {
+    text-align: right;
+
+    .icon {
+      left: 1.25rem;
+      transform: rotate(180deg);
+    }
+
+    &:hover .icon {
+      transform: rotate(180deg) translateX(25%);
+    }
+  }
+
   .icon {
-    right: token('space.sm');
+    height: 2rem;
+    margin-top: -1rem;
+    position: absolute;
+    stroke-width: 1;
+    top: 50%;
+    transition: transform 200ms cubic-bezier(0, 0.4, 0.6, 1);
+    width: 2rem;
   }
 
-  &:hover .icon {
-    transform: translateX(25%);
-  }
-}
-
-.prev {
-  text-align: right;
-
-  .icon {
-    left: 1.25rem;
-    transform: rotate(180deg);
+  .label {
+    display: block;
+    font-size: token('font.size.03');
+    font-weight: 550;
+    margin-bottom: token('space.2xs');
+    text-transform: uppercase;
   }
 
-  &:hover .icon {
-    transform: rotate(180deg) translateX(25%);
+  .title {
+    display: block;
+    font-size: token('font.size.06');
   }
-}
-
-.icon {
-  height: 2rem;
-  margin-top: -1rem;
-  position: absolute;
-  stroke-width: 1;
-  top: 50%;
-  transition: transform 200ms cubic-bezier(0, 0.4, 0.6, 1);
-  width: 2rem;
-}
-
-.label {
-  display: block;
-  font-size: token('font.size.03');
-  font-weight: 550;
-  margin-bottom: token('space.2xs');
-  text-transform: uppercase;
-}
-
-.title {
-  display: block;
-  font-size: token('font.size.06');
-}
 </style>
 
 <nav class="nav">
-  {prev ? <a href={prev.pathname} class="prev"><span class="label">Previous Page</span><span class="title">{prev.title}</span><svg class="icon"><use xlink:href="#arrow-r" /></svg></a> : <span />}
-  {next && <a href={next.pathname} class="next"><span class="label">Next Page</span><span class="title">{next.title}</span><svg class="icon"><use xlink:href="#arrow-r" /></svg></a>}
+  {
+    prev ? (
+      <a href={prev.pathname} class="prev">
+        <span class="label">Previous Page</span>
+        <span class="title">{prev.title}</span>
+        <svg class="icon">
+          <use xlink:href="#arrow-r" />
+        </svg>
+      </a>
+    ) : (
+      <span />
+    )
+  }
+  {
+    next && (
+      <a href={next.pathname} class="next">
+        <span class="label">Next Page</span>
+        <span class="title">{next.title}</span>
+        <svg class="icon">
+          <use xlink:href="#arrow-r" />
+        </svg>
+      </a>
+    )
+  }
 </nav>
