--- a/www/src/components/Head.astro
+++ b/www/src/components/Head.astro
@@ -1,10 +1,12 @@
 ---
-const { title = "Cobalt" } = Astro.props;
+import '../styles/app.scss';
+
+const { title = 'Cobalt' } = Astro.props;
 ---
-<meta charset="UTF-8">
-<meta content="width=device-width, initial-scale=1" name="viewport">
-<link rel="stylesheet" type="text/css" href={Astro.resolve('../styles/app.scss')}>
-<link rel="shortcut icon" type="image/png" href="/favicon-32.png">
-<link rel="apple-touch-icon" type="image/png" sizes="128x128" href="/favicon-128.png">
-<link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/favicon-512.png">
+
+<meta charset="UTF-8" />
+<meta content="width=device-width, initial-scale=1" name="viewport" />
+<link rel="shortcut icon" type="image/png" href="/favicon-32.png" />
+<link rel="apple-touch-icon" type="image/png" sizes="128x128" href="/favicon-128.png" />
+<link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
 <title>{title}</title>
