--- a/www/src/pages/editor.astro
+++ b/www/src/pages/editor.astro
@@ -1,9 +1,8 @@
 ---
-import Editor from '../components/Editor.vue';
 import Footer from '../components/Footer.astro';
 import Head from '../components/Head.astro';
 import Nav from '../components/Nav.astro';
-import SkipToMain from '../components/SkipToMain.astro'
+import SkipToMain from '../components/SkipToMain.astro';
 ---
 
 <!DOCTYPE html>
@@ -25,7 +24,7 @@ import SkipToMain from '../components/SkipToMain.astro'
       <div class="wrapper">
         <h1 style="margin-bottom:0">Editor<sup>Beta</sup></h1>
       </div>
-      <Editor client:load />
+      <p>Coming soon!</p>
     </main>
     <Footer />
   </body>
