--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -15,12 +15,12 @@ const version = packageJSON.version;
   <head>
     <Head title="Cobalt" />
     <style lang="scss">
-      @use "../../tokens" as *;
+      @use '../../tokens' as *;
 
       .header {
         align-items: center;
-        background: token("color.blue.05");
-        color: token("color.white");
+        background: token('color.blue.05');
+        color: token('color.white');
         display: flex;
         flex-direction: column;
         height: calc(100vh - #{token('space.layout.lg')});
