--- a/docs/src/components/Nav.astro
+++ b/docs/src/components/Nav.astro
@@ -62,7 +62,7 @@ let {title = 'Cobalt'} = Astro.props;
 
   body.page--home {
     .grid {
-      background: token('color.blue.05');
+      background: token('color.blue.50');
     }
 
     .title,
@@ -74,7 +74,7 @@ let {title = 'Cobalt'} = Astro.props;
 
 <Icons />
 <header class="grid">
-  <a class="title" href="/cobalt-ui">
+  <a class="title" href="/">
     <CobaltSm />
     <h1>{title}</h1>
   </a>
